# gestore-note

./: CMakeLists.txt  ImportantNotesCollection.cpp  ImportantNotesCollection.h  Note.cpp  Note.h  NotesCollection.cpp  NotesCollection.h  Observer.h  README.md  Subject.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  ImportantNotesCollectionTest.cpp  NoteTest.cpp  NotesCollectionTest.cpp  RunAllTest.cpp
